--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@
       @apply bg-blue-500 text-white;
     }
     .info:hover {
-      @apply bg-green-400 text-white;
+      @apply bg-[#42CAFD] text-white;
     }
   
     .warning {
