--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,8 @@
     }
   
     .lg {
-      @apply px-8;
+      @apply w-40;
+      @apply h-12
     }
   
     .xl {
@@ -32,7 +33,7 @@
     }
   
     .primary {
-      @apply bg-bleed-blue text-white;
+      @apply bg-blue-500 text-white;
     }
     .primary:hover {
       @apply bg-blue-600 text-white;
@@ -49,7 +50,7 @@
       @apply bg-blue-500 text-white;
     }
     .info:hover {
-      @apply bg-[#42CAFD] text-white;
+      @apply bg-[#03b2cb] text-white;
     }
   
     .warning {
